# CXLMemSim-dev

./: .cursorignore  .gitignore  .gitmodules  CMakeLists.txt  README.md  conanfile.txt
.github/workflows/: cmake.yml
artifact/: build_and_run_all.sh  compare_with_real.sh  gen_workloads.sh  mlc-arrowlake.txt  mlc-cxlmemsim.txt
artifact/gapbs/bc/: cxlmemsim.txt  cxlmemsim_none_none_none_none.txt  ltrace_orig.txt  orig.txt  strace.txt  strace_orig.txt  strace_orig_test.txt
artifact/gapbs/bfs/: cxlmemsim.txt  orig.txt
artifact/gapbs/cc/: cxlmemsim.txt  orig.txt
artifact/gapbs/pr/: cxlmemsim.txt  orig.txt
artifact/gapbs/sssp/: cxlmemsim.txt  orig.txt
artifact/gapbs/tc/: cxlmemsim.txt  orig.txt
artifact/gromacs/: orig.txt
artifact/gromacs/gmx/: cxlmemsim.txt  orig.txt
artifact/llama/: orig.txt
artifact/llama/llama-cli/: cxlmemsim.txt  orig.txt
artifact/memcached/memcached/: cxlmemsim.txt  orig.txt
artifact/microbench/ld/: cxlmemsim.txt  orig.txt
artifact/microbench/ld_serial/: cxlmemsim.txt  orig.txt
artifact/microbench/malloc/: cxlmemsim.txt  orig.txt
artifact/microbench/st/: cxlmemsim.txt  orig.txt
artifact/microbench/st_serial/: cxlmemsim.txt  orig.txt
artifact/microbench/writeback/: cxlmemsim.txt  orig.txt
artifact/vsag/python3/: cxlmemsim.txt  orig.txt
include/: bpftimeruntime.h  cxlcontroller.h  cxlcounter.h  cxlendpoint.h  helper.h  incore.h  lbr.h  logging.h  monitor.h  pebs.h  perf.h  policy.h  rob.h  sock.h  uncore.h
microbench/: CMakeLists.txt  cache-thrash.c  dsa.c  dsa.cpp  ld.cpp  ld_nt.cpp  ld_nt_serial.cpp  ld_serial.cpp  ld_simple.cpp  nt-ld.cpp  ptr-chasing.cpp  st.cpp  st_serial.cpp  thread.cpp  uarch.c  uarch.cpp  uarch.h  writeback.cpp
script/: clflush_result.py  collect_graph.py  collect_weights.py  dump_pmu.py  get_all_results.py  get_pebs.py  get_pebs_graph.py  ld.csv  ld_base_result.py  ld_base_results_local.csv  ld_plot_result.py  ld_pmu128_results.csv  ld_pmu16_results.csv  ld_pmu256_results.csv  ld_pmu32_results.csv  ld_pmu64_results.csv  ld_pmu8_results.csv  ld_result.csv  ld_result.py  ld_results.csv  ld_results_remote.csv  run_gromacs.sh  st_result.py  st_results_remote.csv  wb_result.py
src/: bpftimeruntime.cpp  bw.cpp  cxlcontroller.cpp  cxlendpoint.cpp  cxlmemsim.bpf.c  cxlmemsim.json  helper.cpp  incore.cpp  lbr.cpp  main-test.cc  main.cc  main.cpp  module.cc  module.cpp  monitor.cpp  pebs.cpp  perf.cpp  policy.cpp  rob.cc  rob.cpp  uncore.cpp
workloads/: CMakeLists.txt
