add_executable(calloc calloc.c)
add_executable(mmap_read mmap_read.c)
add_executable(mmap_write mmap_write.c)
add_executable(malloc malloc.c)
add_executable(sbrk sbrk.c)
add_executable(st st.cpp)
add_executable(ld ld.cpp)
add_executable(ld_simple ld_simple.cpp)
add_executable(nt-ld nt-ld.cpp)
add_executable(nt-st nt-st.cpp)
add_executable(ptr-chasing ptr-chasing.cpp)