add_executable(calloc calloc.c)
add_executable(mmap_read mmap_read.c)
add_executable(mmap_write mmap_write.c)
add_executable(malloc malloc.c)
add_executable(sbrk sbrk.c)
add_executable(st st.cpp)
add_executable(ld8 ld.cpp)
target_compile_definitions(ld8 PRIVATE -DFENCE_COUNT=8)
add_executable(ld16 ld.cpp)
target_compile_definitions(ld16 PRIVATE -DFENCE_COUNT=16)
add_executable(ld32 ld.cpp)
target_compile_definitions(ld32 PRIVATE -DFENCE_COUNT=32)
add_executable(ld64 ld.cpp)
target_compile_definitions(ld64 PRIVATE -DFENCE_COUNT=64)
add_executable(ld128 ld.cpp)
target_compile_definitions(ld128 PRIVATE -DFENCE_COUNT=128)
add_executable(ld_simple ld_simple.cpp)
add_executable(nt-ld nt-ld.cpp)
add_executable(nt-st nt-st.cpp)
add_executable(ptr-chasing ptr-chasing.cpp)